[tool.poetry]
name = "my-twitch-webhooks"
version = "0.1.0"
description = "My personal app to handle Twitch webhooks."
authors = ["Jonatas Baldin <jonatas.baldin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
sanic = "^18.12"
aiohttp = "^3.5"

[tool.poetry.dev-dependencies]
flake8 = "^3.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
